# GB_Recommender_Systems

1th_homework/: 1th_homework.ipynb
2th_homework/: 2th_homework.ipynb
3th_homework/: 3th_homework.ipynb
4th_homework/: 4th_homework.ipynb  README.md  setup.cfg
4th_homework/src/package_4th_homework/: recommenders.py  utils.py
4th_homework/src/package_4th_homework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
5th_homework/: 5th_homework.ipynb
6th_homework/: 6th_homework.ipynb
6th_homework/src/: utils.py
8th_homework/: 8th_homework.ipynb  recommendations.csv
8th_homework/src/: metrics.py  recommenders.py  utils.py
