[metadata]
name = package_4th_homework
version = 1
author = SergeyZ06
author_email = SergeyZ06@yandex.ru
description = My 4th_homework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SergeyZ06/Recommender_Systems
project_urls =
    Bug Tracker = https://github.com/SergeyZ06/Recommender_Systems
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
